#587154 tooltip z-index fixed

--- a/modules/openlayers_behaviors/openlayers_behaviors.css
+++ b/modules/openlayers_behaviors/openlayers_behaviors.css
@@ -19,7 +19,7 @@
   left: 0px;
   border: 1px solid #006699;
   background-color: white;
-  z-index: 1001;
+  z-index: 1004;
   padding: 2px 3px 2px 3px;
 }
 
